--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+    implementation 'com.smartlook.recording:app:1.8.6-native'
 }
