--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-android-plugin-annotation-v9:0.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
     implementation 'com.smartlook.recording:app:1.8.6-native'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'com.segment.analytics.android:analytics:4.+'
 }
