--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kawaHomeActivity">
+        <activity android:name=".kawaHomeActivity"
+            android:windowSoftInputMode="adjustPan">
 
         </activity>
     </application>
