--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,20 +12,23 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
-        android:theme="@style/Theme.KawaSdkTest10">
+        android:theme="@style/Theme.KawaSdkTest10"
+        android:windowSoftInputMode="adjustResize">
         <activity
             android:name=".HomeActivity"
-            android:exported="true" >
+            android:windowSoftInputMode="adjustPan"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".kawaHomeActivity"
+        <activity
+            android:name=".kawaHomeActivity"
             android:windowSoftInputMode="adjustPan">
 
         </activity>
